CHANGES.txt - 02/26/2004
------------------------

CHANGES IN CUPS V1.1.21rc1

	- Optimized the scanning of new PPD files on scheduler
	  startup (STR #424)
	- The EPM list file did not include the bin, lib, or
	  sbin directories (STR #598)
	- The web interface did not redirect administration
	  tasks to the primary server for a class or printer
	  (STR #491)
	- The cups-lpd mini-daemon did not reject print jobs to
	  queues that were rejecting new print jobs (STR #515)
	- Some calls to the ctype functions did not account for
	  platforms that use a signed char type by default (STR
	  #518)
	- The scheduler could use excess amounts of CPU if a CGI
	  program was sending data faster than the client could
	  take it (STR #595)
	- Updated the Ghostscript 8.x integration stuff (STR
	  #484)
	- The lpd backend used a source port of 732 by default,
	  which is outside of the range defined by RFC 1179;
	  also added a new (default) "reserve=any" option for
	  any priviledged port from 1 to 1023 (STR #474)
	- The scheduler did not check for a valid Listen/Port
	  configuration (STR #499)
	- The cupsPrintFiles() function did not always set the
	  last IPP error message (STR #538)
	- The pstops filter did not write the PostScript header
	  line if the file began with a PJL escape sequence (STR
	  #574)
	- The printer-is-accepting-jobs status of remote
	  printers was not sent to clients via browsing or
	  polling (STR #571)
	- The web interface did not show the printer state
	  history information (STR #592)
	- The rastertoepson filter would crash under certain
	  cirsumstances (STR #583)
	- The USB backend did not handle serial numbers using
	  the (incorrect) SN keyword and did not terminate the
	  make and model name strings properly (STR #471, STR
	  #588)
	- The USB backend did not build on Solaris x86 (STR
	  #585)
	- The cupsDoAuthentication() function did not use the
	  method name for Digest authentication (STR #584)